This is phplotdocs/ChangeLog, listing changes to the PHPlot Reference Manual
-----------------------------------------------------------------------------
Note: This is a more complete ChangeLog than the one in Appendix A of the
manual, which only contains summaries of changes.
-----------------------------------------------------------------------------

2010-04-18
   * webform.xml, images/webform.png: New example of a web form with plot.
   * examples.xml, main.xml, Makefile: Changes for new web form example.

2010-04-03
   For release with PHPlot-5.1.1:
   * Change vague references to release "after 5.1.0" to "5.1.1".

2010-03-31
   * reference.xml, concepts.xml: Clarify that the data array must use
     0-based sequential integer indexes. (Based on a problem reported in
     the Help forum.) This was always true, but never actually documented.

   * reference.xml: SetDataColors, SetDataBorderColors, SetErrorBarColors
     are 3 functions that take an array of colors, or a single color.
     Document a way around the restriction of not being able to specify
     a single color as array(R,G,B).

2010-03-26
   * concepts.xml: Document new plot type 'stackedarea'.
   * developer.xml: Internal function DrawArea() has a new parameter.
   * examples.xml: Reference new example stackedarea1.
   * examples/stackedarea1.php: New example of new plot type 'stackedarea'.
   * quickstart.xml: New plot type
   * reference.xml: SetPlotType has a new plot type. For data label lines,
     list only plot types that it does work with.
   * All: Fixes to abstract markup (to avoid title suppressing CSS hack).

2010-03-23
   * concepts.xml: New Y Data Labels for stackedbars.
   * reference.xml: Changes to SetYDataLabelPos for stackedbars labels.
   * examples.xml: Reference new example stackedbar3.
   * examples/stackedbar3.php: New example of stackedbar chart with data labels.

2010-01-24
   * main.xml: Updated copyright year to 2010.